[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Mapa.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Nu 1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/RavenManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Corazon.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Icons/Maiz.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Verduras/Pumpkin.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Verduras/Tomato.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Verduras/Carrot.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Verduras/Radish.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Plataforma.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sounds/binbash - ze crows.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/ShotGun.wav" type="AudioStream" id=15]
[ext_resource path="res://Sounds/Snniper.wav" type="AudioStream" id=16]
[ext_resource path="res://Sounds/NormalShot.wav" type="AudioStream" id=17]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=18]
[ext_resource path="res://Sounds/Plant.wav" type="AudioStream" id=19]
[ext_resource path="res://Sounds/Recolect.wav" type="AudioStream" id=20]
[ext_resource path="res://Sounds/Hit_Crown.wav" type="AudioStream" id=21]
[ext_resource path="res://Sounds/Hit_Player.wav" type="AudioStream" id=22]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

uniform sampler2D background;
uniform float speed = 0.1;

void fragment(){
	COLOR.rgba = texture(background, UV+ vec2(mod(TIME*speed,1.0),0.0),0.0);
}"

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )
shader_param/speed = 0.01
shader_param/background = ExtResource( 4 )
_sections_unfolded = [ "shader_param" ]

[sub_resource type="DynamicFontData" id=3]

font_path = "res://Fonts/Pixel Cowboy.otf"

[sub_resource type="DynamicFont" id=4]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFontData" id=5]

font_path = "res://Fonts/Pixel Cowboy.otf"

[sub_resource type="DynamicFont" id=6]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=7]

font_path = "res://Fonts/Pixel Cowboy.otf"

[sub_resource type="DynamicFont" id=8]

size = 40
use_mipmaps = true
use_filter = false
font_data = SubResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainScene" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Fade" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
margin_left = -108.0
margin_top = -163.0
margin_right = 1195.0
margin_bottom = 649.0

[node name="DeadTimer" type="Timer" parent="Fade" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Fade2" parent="." index="1" instance=ExtResource( 2 )]

editor/display_folded = true
margin_left = -108.0
margin_top = -163.0
margin_right = 1195.0
margin_bottom = 649.0

[node name="DeadTimer" type="Timer" parent="Fade2" index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="SceneLimits" type="StaticBody2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 6.13867, -45.4263 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Mapa" type="Sprite" parent="SceneLimits" index="0"]

position = Vector2( 523.861, 345.426 )
scale = Vector2( 1.68238, 1.68238 )
z_index = -2
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SceneLimits" index="1"]

build_mode = 0
polygon = PoolVector2Array( 0, 0, 0, 600, 1030, 600, 1030, 0, 1070, 0, 1080, 620, -50, 620, -50, 0 )

[node name="Nu 1" type="Sprite" parent="SceneLimits" index="2"]

material = SubResource( 2 )
position = Vector2( 1413.86, 233.505 )
scale = Vector2( 1.44, 1 )
z_index = -1
texture = ExtResource( 4 )
_sections_unfolded = [ "Material", "Z Index" ]

[node name="Player" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 478.772, 508.079 )
_sections_unfolded = [ "Collision", "collision" ]
sniper = null

[node name="RavenManager" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 335.848, 87.3441 )

[node name="LabelOleada" type="Label" parent="." index="5"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 716.0
margin_top = 30.0
margin_right = 904.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.78125, 0.718307, 0.708008, 1 )
text = "WAVE 1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_fonts" ]

[node name="OleadaTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[node name="IntercambioOleadaTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="IconoHP" type="Sprite" parent="." index="8"]

position = Vector2( 49.8066, 56.2183 )
scale = Vector2( 0.744322, 0.819323 )
texture = ExtResource( 7 )

[node name="LabelHP" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 30.0
margin_right = 186.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
text = "100%"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="IconoAmmo" type="Sprite" parent="." index="10"]

position = Vector2( 420, 50 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="LabelAmmo" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 465.0
margin_top = 30.0
margin_right = 634.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.780392, 0.713726, 0.705882, 1 )
text = "UNLIMITED"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Pumpkin" parent="." index="12" instance=ExtResource( 9 )]

position = Vector2( 120, 520 )

[node name="Tomato" parent="." index="13" instance=ExtResource( 10 )]

position = Vector2( 910, 520 )

[node name="Carrot" parent="." index="14" instance=ExtResource( 11 )]

position = Vector2( 380, 520 )

[node name="Radish" parent="." index="15" instance=ExtResource( 12 )]

position = Vector2( 660, 520 )

[node name="Plataforma" parent="." index="16" instance=ExtResource( 13 )]

position = Vector2( 250, 440 )
scale = Vector2( 1.5, 1.5 )

[node name="Plataforma2" parent="." index="17" instance=ExtResource( 13 )]

position = Vector2( 680, 440 )
scale = Vector2( 1.5, 1.5 )

[node name="MainTheme" type="AudioStreamPlayer" parent="." index="18"]

stream = ExtResource( 14 )
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[node name="SoundEffects" type="Node2D" parent="." index="19"]

[node name="ShotGun" type="AudioStreamPlayer" parent="SoundEffects" index="0"]

stream = ExtResource( 15 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sniper" type="AudioStreamPlayer" parent="SoundEffects" index="1"]

stream = ExtResource( 16 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="NormalShot" type="AudioStreamPlayer" parent="SoundEffects" index="2"]

stream = ExtResource( 17 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Jump" type="AudioStreamPlayer" parent="SoundEffects" index="3"]

stream = ExtResource( 18 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Plant" type="AudioStreamPlayer" parent="SoundEffects" index="4"]

stream = ExtResource( 19 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Recolect" type="AudioStreamPlayer" parent="SoundEffects" index="5"]

stream = ExtResource( 20 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitCrown" type="AudioStreamPlayer" parent="SoundEffects" index="6"]

stream = ExtResource( 21 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HitPlayer" type="AudioStreamPlayer" parent="SoundEffects" index="7"]

stream = ExtResource( 22 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="OleadaTimer" to="." method="_on_OleadaTimer_timeout"]

[connection signal="timeout" from="IntercambioOleadaTimer" to="." method="_on_IntercambioOleadaTimer_timeout"]

[connection signal="finished" from="MainTheme" to="." method="_on_MainTheme_finished"]


